// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Associate {
  id                String              @id @default(uuid())
  accountId         String
  age               Int
  firstName         String
  middleName        String?
  lastName          String
  isActive          Boolean             @default(true)
  AssociatePlanType AssociatePlanType[]
  Reimbursement     Reimbursement[]
}

model AssociateType {
  id                String              @id @default(uuid())
  name              String
  description       String
  AssociatePlanType AssociatePlanType[]
}

model Plan {
  id                     String              @id @default(uuid())
  name                   String
  description            String
  baseValue              Float
  canEnableOdontological Boolean             @default(false)
  AssociatePlanType      AssociatePlanType[]
  Reimbursement          Reimbursement[]
}

model AssociatePlanType {
  id                   String        @id @default(uuid())
  planId               String        @unique
  associateId          String        @unique
  associateTypeId      String        @unique
  hasOdontologicalPlan Boolean       @default(false)
  finalPlanValue       Float         @default(0.0)
  associate            Associate     @relation(fields: [associateId], references: [id])
  plan                 Plan          @relation(fields: [planId], references: [id])
  associateType        AssociateType @relation(fields: [associateTypeId], references: [id])
}

model Reimbursement {
  id             String    @id @default(uuid())
  planId         String    
  associateId    String    
  totalRequested Float
  totalPaid      Float?
  isApproved     Boolean   @default(false)
  associate      Associate @relation(fields: [associateId], references: [id])
  plan           Plan      @relation(fields: [planId], references: [id])
}
